Append more reporting plugin
appending list:
 * PMD
 * Findbugs
 * Cobertura